--- a/.github/workflows/build-and-upload-packages.yml
+++ b/.github/workflows/build-and-upload-packages.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           files: release/packages/*
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
