--- a/.github/workflows/build-and-upload-packages.yml
+++ b/.github/workflows/build-and-upload-packages.yml
@@ -23,6 +23,14 @@ jobs:
         with:
           go-version: 'stable'
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Build web assets
+        run: make web
+
       - name: Build packages
         run: |
           make build
